test/optimizations/inline/directCall.good
directCall.chpl:2: In function 'foo':
directCall.chpl:5: error: Attempt to inline a function, 'foo', that calls itself
